--- a/config/locales/rails_admin.zh-TW.yml
+++ b/config/locales/rails_admin.zh-TW.yml
@@ -43,7 +43,7 @@ zh-TW:
       dashboard:
         title: "站台管理"
         menu: "儀表板"
-        breadcrumb: "儀錶板"
+        breadcrumb: "儀表板"
       index:
         title: "%{model_label_plural}清單"
         menu: "清單"
